--- a/app/globals.css
+++ b/app/globals.css
@@ -193,6 +193,28 @@ body {
   animation: spin 1s linear infinite;
 }
 
+.switch {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 1rem;
+  gap: 0.5rem;
+
+}
+
+.switch-card {
+  /* border: 1px solid #ccc; */
+  border-radius: 4px;
+  padding: 1rem;
+  margin: 1rem;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1rem;
+
+}
+
 .card {
   border: 1px solid #ccc;
   border-radius: 4px;
